--- a/Netflix-clon/src/Components/Rows/Row/Row.css
+++ b/Netflix-clon/src/Components/Rows/Row/Row.css
@@ -1,4 +1,4 @@
-.rwo_poster{
+.row_poster{
     width: 100%;
     object-fit: contain;
     max-height: 100px;
@@ -6,14 +6,14 @@
     margin-right: 10px;
 
 }
-.row_poster{
+.row_posters{
     display:flex;
     overflow-y: hidden;
     overflow-x: scroll;
     padding: 20px;
 
 }
-.row_poster::-webkit-scrollbar{
+.row_posters::-webkit-scrollbar{
     display: none;
 }
 .row_poster:hover{
@@ -25,7 +25,14 @@
 .row_posterLarge:hover{
     transform: scale(1.09);
 }
-.row_{
-    margin-left: 20px;
-    color:white;
+
+.row {
+    color: #fff;
+    margin-left:  20px;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 30px;
+    font-style: normal;
+    font-variation-settings:
+    "wdth" 100;
 }
